# git_flow

./: .env.template  .gitignore  coordinates.py  exceptions.py  init_bot.py  main.py  pyproject.toml  run_bot.py  settings.py  weather.py  weather_api_service.py  weather_formatter.py
handlers/: __init__.py  handler_commands.py  handler_just_text.py  handler_send_photo.py
logic_server/: middleware.py
